--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/listFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="my.project.roomlearning.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
+        android:id="@+id/listFragment"
+        android:name="my.project.roomlearning.presentation.fragments.listFragment.ListFragment"
+        android:label="fragment_list"
+        tools:layout="@layout/fragment_list">
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_listFragment_to_addFragment"
+            app:destination="@id/addFragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="my.project.roomlearning.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
+        android:id="@+id/addFragment"
+        android:name="my.project.roomlearning.presentation.fragments.addFragment.AddFragment"
+        android:label="fragment_add"
+        tools:layout="@layout/fragment_add">
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/action_addFragment_to_listFragment"
+            app:destination="@id/listFragment" />
     </fragment>
 </navigation>
